saving work and uploading for assignment of week 04
